Fix: set env to java for Render deployment

--- a/render.yaml
+++ b/render.yaml
@@ -4,6 +4,4 @@ services:
     env: java
     buildCommand: ./mvnw clean package -DskipTests
     startCommand: java -jar target/online-voting-1.0.0.jar
-    envVars:
-      - key: PORT
-        value: 8080
+    plan: free
